<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="246dp"
        android:layout_height="270dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/login_icon"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="170dp"
        android:text="@string/login_menu_" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="341dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="450dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="342dp"
        android:layout_height="27dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="430dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="340dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="530dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="343dp"
        android:layout_height="32dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="500dp"
        android:text="@string/password" />

    <Button
        android:id="@+id/button"
        android:layout_width="344dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="600dp"
        android:text="@string/login" />


</RelativeLayout>