<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_twenty_four"
    tools:context=".auth.SimpleLoginActivity">


    <!--   Login progress-->

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="473dp"
        android:layout_height="858dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="238dp"
            android:layout_height="208dp"
            android:layout_marginTop="-200dp"
            android:layout_marginBottom="30dp"
            app:srcCompat="@drawable/login_icon"
            android:contentDescription="@string/todo" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:foregroundGravity="center"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_sixteen">

            <EditText
                android:id="@+id/simple_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_sixteen">

            <EditText
                android:id="@+id/simple_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBoxRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_eighteen"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>