<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_movies_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="72dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movies_poster_path"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="7dp"
                    android:src="@drawable/login_icon"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:paddingStart="16dp"
                        android:text="@string/the_beatles_ob_la_di_ob_la_da"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingEnd="16dp"
                        android:text="@string/music_popular"
                        android:textColor="#cdc9c9"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:maxLines="3"
                        android:paddingEnd="16dp"
                        android:text="@string/_6_3rb"
                        android:textColor="#cdc9c9"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="29dp"
                        android:layout_height="18dp"
                        android:layout_marginTop="-18dp"
                        android:layout_marginStart="28dp"
                        android:outlineSpotShadowColor="#cdc9c9"
                        app:srcCompat="@drawable/headphone"
                        android:contentDescription="@string/todo"
                        tools:targetApi="p" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/rating_image"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star"
                        android:contentDescription="@string/todo"
                        app:tint="@color/colorAccent" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/_5_0" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>